--- a/dockerfile/bmlb/Dockerfile
+++ b/dockerfile/bmlb/Dockerfile
@@ -1,5 +1,17 @@
 FROM haproxy:1.8.2-alpine
 
-COPY bin/kube-bmlb /bin
+RUN set -eux; \
+	apk add --no-cache --virtual .build-deps \
+		bash \
+		gcc \
+		musl-dev \
+		openssl \
+		git \
+		curl \
+		ipvsadm \
+		iptables \
+		ipset
+
+COPY bin/bmlb /bin
 EXPOSE 80 9010
-CMD ["kube-bmlb", "--logtostderr"]
+CMD ["bmlb", "--logtostderr"]
